# wtftools

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  PLUGIN_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  wtf.1  wtf.py
.github/workflows/: ci.yml  publish.yml  release.yml
completions/: wtf
debian/: changelog  control  rules
docs/: AUDIT.md  CONFIG.md  OUTPUT.md  QUICKSTART.md  README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_IT.md  README_JA.md  README_KR.md  README_PT.md  README_RU.md  README_ZH.md  RESOURCES.md  ROADMAP.md
scripts/: build-deb.sh  wtf.bash-completion  wtfd.service
tests/: conftest.py  test_audit.py  test_audit_extras.py  test_colors.py  test_completion.py  test_config.py  test_conntrack_alert_explain.py  test_cron.py  test_daemon.py  test_disk_usage.py  test_explain_deep.py  test_info.py  test_iteration10.py  test_iteration11.py  test_iteration12.py  test_iteration13.py  test_iteration14.py  test_iteration15.py  test_iteration16.py  test_iteration2_extras.py  test_iteration3.py  test_iteration4.py  test_iteration5.py  test_iteration6.py  test_iteration7.py  test_iteration8.py  test_llm_html_output.py  test_main.py  test_main_extras.py  test_net_restart_checks.py  test_nginx_checks.py  test_nginx_conf.py  test_plain_formats.py  test_plugins.py  test_port_docker.py  test_probes_smart_diff.py  test_proc_checks.py  test_psi_cert_logs_parallel.py  test_public_api.py  test_snapshot_docker_ntp.py  (+4 more)
wtftools/: __init__.py  __main__.py  audit.py  colors.py  completion.py  config.py  daemon.py  events.py  explain.py  fleet.py  info.py  llm.py  main.py  nginx_checks.py  nginx_conf.py  plugin_sdk.py  sections.py  snapshot.py  sysinfo.py
wtftools/checks/: __init__.py  cron.py  plugins.py  sysinfo.py
