[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtftools"
dynamic = ["version"]
description = "One command to see what is going on with your Linux server right now."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
maintainers = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
keywords = ["devops", "sre", "linux", "diagnostics", "monitoring", "cron", "system", "audit", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
full = ["psutil>=5.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
    "stdeb>=0.10.0",
]

[project.scripts]
wtf = "wtftools.main:main"
wtftools = "wtftools.main:main"
wtfd = "wtftools.daemon:cli_main"

[project.urls]
Homepage = "https://github.com/wachawo/wtftools"
Repository = "https://github.com/wachawo/wtftools"
Documentation = "https://github.com/wachawo/wtftools#readme"
"Bug Reports" = "https://github.com/wachawo/wtftools/issues"

[tool.setuptools.dynamic]
version = { attr = "wtftools.__version__" }

[tool.setuptools.packages.find]
include = ["wtftools*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"share/bash-completion/completions" = ["scripts/wtf.bash-completion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=wtftools --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["wtftools"]
omit = ["wtftools/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if HAS_PSUTIL:",
]
show_missing = true

[tool.ruff]
line-length = 180
lint.select = ["E","F","I","UP","B","SIM","C4"]
# E501 — long lines (handled by line-length=180 above for the few we keep)
# UP009 — UTF-8 encoding declaration is intentional per project style
#         (`rules/python.md`: every file starts with shebang + encoding + docstring).
# B008  — function-call-in-default-arg is OK for our config defaults pattern.
# SIM105 — `try/except/pass` is sometimes clearer than `contextlib.suppress`.
# B011  — `assert False` inside `try: ... except` is a fine pytest pattern.
# SIM102/SIM108 — stylistic; we keep the more-explicit branch versions.
lint.ignore = ["E501", "UP009", "B008", "SIM105", "B011", "SIM102", "SIM108"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]
