[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtftools"
version = "0.0.0"
description = "One command to see what is going on with your Linux server right now."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
maintainers = [{ name = "Aleksandr Pimenov", email = "wachawo@gmail.com" }]
keywords = ["devops", "sre", "linux", "diagnostics", "monitoring", "cron", "system", "audit", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
full = ["psutil>=5.9.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "ruff>=0.4.0",
    "build>=1.0.0",
    "stdeb>=0.10.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/wachawo/wtftools"
Repository = "https://github.com/wachawo/wtftools.git"
Documentation = "https://github.com/wachawo/wtftools#readme"
"Bug Reports" = "https://github.com/wachawo/wtftools/issues"

[project.scripts]
wtf = "wtftools.main:main"
wtftools = "wtftools.main:main"

[tool.setuptools.packages.find]
include = ["wtftools*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.data-files]
"share/bash-completion/completions" = ["scripts/wtf.bash-completion"]

[tool.black]
line-length = 180
target-version = ["py38"]

[tool.ruff]
line-length = 180
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
# E501  — long lines (we cap via line-length, but keep some tables/URLs)
# UP009 — UTF-8 encoding declaration is intentional per project style
# B008  — function-call-in-default-arg is OK for our config defaults
# SIM105 — try/except/pass is sometimes clearer than contextlib.suppress
# B011  — `assert False` inside try/except is a fine pytest pattern
# SIM102/SIM108 — stylistic; keep the explicit-branch versions
ignore = ["E501", "UP009", "B008", "SIM105", "B011", "SIM102", "SIM108"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
required_plugins = ["pytest-cov"]
addopts = "-v --tb=short --cov=wtftools --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["wtftools"]
omit = ["wtftools/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if HAS_PSUTIL:",
]
show_missing = true
skip_empty = true
